fixed white spacing

--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -55,3 +55,8 @@ a {
   font-weight: 500;
   text-transform: capitalize;
 }
+
+.question-style {
+  line-height: 100px;
+  white-space: pre-wrap;
+}
